--- a/Comedy.html
+++ b/Comedy.html
@@ -46,7 +46,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./Home.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./movies.html">Movies</a>
@@ -520,7 +520,7 @@
            <div class="container-fluid back">
              <footer class="py-3 my-4">
                <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                 <li class="nav-item1"><a href="./Home.html" class="nav-link px-2 text-warning login-font">Home</a></li>
+                 <li class="nav-item1"><a href="./index.html" class="nav-link px-2 text-warning login-font">Home</a></li>
                  <li class="nav-item1"><a href="./movies.html" class="nav-link px-2 text-warning login-font">Movies</a></li>
                  <li class="nav-item1"><a href="./action.html" class="nav-link px-2 text-warning login-font">Action</a></li>
                  <li class="nav-item1"><a href="./Horror.html" class="nav-link px-2 text-warning login-font">Horror</a></li>
